# g5

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  g5compiler.cpp  g8compiler.cpp
docs/: ebnf.md  go_ebnf.md  go_lexer.ebnf  go_lexer_ebnf.md  go_syntax.ebnf  go_syntax_ebnf.md
test/: b.go  consts.go  lex.go  parse.go  typedecl.go
test/adhoc/: a.go  const.go  consts.go  func.go  importdecl.go  method.go  statement.go  type.go  typedecl.go  var.go  vardecl.go
test/codegen/: simple.go
test/lex/: lex.go
test/official/: mprof.go  os3_solaris.go  os_plan9.go
test/officialimpl/: asm.go  html_escape.go  proc.go  ssa.go
test/parser/adhoc/: const.go  expression.go  helloworld.go  import.go  statement.go  var.go
test/parser/official/: arith.go  entity.go  extfloat.go  parser.go
